--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
+    "@mui/x-date-pickers": "^6.19.6",
     "@nextui-org/react": "^2.2.10",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
