--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-social-icons": "^6.15.0",
+    "react-social-login-buttons": "^4.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
