--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
     "@nextui-org/react": "^2.2.10",
+    "antd": "^5.15.3",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
