--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mui/material-next": "^6.0.0-alpha.125",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
+    "@mui/material-next": "^6.0.0-alpha.125",
     "@mui/x-date-pickers": "^6.19.6",
     "@nextui-org/react": "^2.2.10",
     "antd": "^5.15.2",
+    "chart.js": "^4.4.2",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
+    "npkill": "^0.11.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
