--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
     "@nextui-org/react": "^2.2.10",
+    "antd": "^5.15.3",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
