--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "@mui/x-date-pickers": "^6.19.6",
     "@nextui-org/react": "^2.2.10",
     "antd": "^5.15.2",
-    "chart.js": "^4.4.2",
     "dayjs": "^1.11.10",
+    "faker": "^5.3.0",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "npkill": "^0.11.3",
     "react": "^18",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
