--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mui/material-next": "^6.0.0-alpha.125",
+    "@ant-design/icons": "^5.3.3",
     "@ant-design/nextjs-registry": "^1.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
+    "@mui/material-next": "^6.0.0-alpha.125",
     "@mui/x-date-pickers": "^6.19.6",
     "@nextui-org/react": "^2.2.10",
     "antd": "^5.15.2",
