--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/react": "^2.2.10",
     "antd": "^5.15.2",
     "dayjs": "^1.11.10",
+    "echarts-for-react": "^3.0.2",
     "faker": "^5.3.0",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
