--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
     "@nextui-org/react": "^2.2.10",
+    "@nextui-org/table": "^2.0.28",
+    "antd": "^5.15.3",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.22.3",
+    "reactstrap": "^9.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
