--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^6.19.6",
     "@nextui-org/react": "^2.2.10",
     "antd": "^5.15.2",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
