--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "antd": "^5.15.2",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "export-to-csv": "^1.2.4",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
