--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.4",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/table": "^2.0.28",
     "antd": "^5.15.3",
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.8",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.22.3",
-    "reactstrap": "^9.2.2"
+    "reactstrap": "^9.2.2",
+    "socket.io-client": "^4.7.5",
+    "your-component-library": "^11.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
