--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "echarts-for-react": "^3.0.2",
-    "faker": "^5.3.0",
     "export-to-csv": "^1.2.4",
+    "faker": "^5.3.0",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "npkill": "^0.11.3",
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
