--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "echarts-for-react": "^3.0.2",
-    "faker": "^5.3.0",
     "export-to-csv": "^1.2.4",
+    "faker": "^5.3.0",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "npkill": "^0.11.3",
