--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "faker": "^5.3.0",
     "firebase": "^10.10.0",
     "framer-motion": "^11.0.8",
-    "moment": "^2.30.1",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "npkill": "^0.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.22.3",
     "react-social-icons": "^6.15.0",
     "react-social-login-buttons": "^4.1.0",
     "reactjs-popup": "^2.0.6",
