--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "export-to-csv": "^1.2.4",
     "faker": "^5.3.0",
     "firebase": "^10.10.0",
     "framer-motion": "^11.0.8",
-    "moment": "^2.30.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "npkill": "^0.11.3",
     "react": "^18",
