--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-social-icons": "^6.15.0",
     "react-social-login-buttons": "^4.1.0",
     "reactjs-popup": "^2.0.6",
+    "recharts": "^2.12.6",
     "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1",
     "yup": "^1.4.0"
