realtime chat dashboard

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "echarts-for-react": "^3.0.2",
+    "engine.io-client": "^6.5.3",
     "export-to-csv": "^1.2.4",
     "faker": "^5.3.0",
     "firebase": "^10.10.0",
@@ -43,7 +44,9 @@
     "react-social-login-buttons": "^4.1.0",
     "reactjs-popup": "^2.0.6",
     "socket.io-client": "^4.7.5",
+    "utf-8-validate": "^5.0.10",
     "uuid": "^9.0.1",
+    "ws": "^8.17.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
