--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "npkill": "^0.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.22.3",
     "react-social-icons": "^6.15.0",
     "react-social-login-buttons": "^4.1.0",
